@@ -3,6 +3,7 @@ CVS HEAD:
   * British English
  * updated translations:
   * catalan
+ * In language-selection dialog, consistently use native name for all languages, with the (hopefully) official latin transcription for those that cannot be displayed in the default font (russian, bulgarian, greek)
  * language fixes and polishing (English)
 
 Version 0.8.10:
